# Loom

./: .env.example  .gitignore  Dockerfile  README.md  hello.py  loom.db  pyproject.toml
app/: main.py
app/models/: config.py  database.py
app/routes/: api.py  views.py
app/services/: ai_service.py  data_processor.py  session_store.py  template_engine.py  validator.py
app/static/: sample_data.csv  sample_data.xlsx
app/templates/: base.html  download.html  history.html  index.html  templates.html
app/templates/components/: ai_review_panel.html  config_preview.html  data_preview.html  generation_results.html  mapping_form.html  mapping_ui.html
templates/: arista_eos.j2  arista_eos_complete.j2  aruba_aos_cx.j2  aruba_aos_cx_complete.j2  cisco_ios.j2  cisco_ios_complete.j2  cisco_ios_global.j2  cisco_ios_interface.j2  cisco_ios_xe_complete.j2  cisco_ios_xe_global.j2  cisco_ios_xe_interface.j2
